# tsc

./: .clang-format  CMakeLists.txt  LICENSE  build.sh
src/: main.cpp
